--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,18 +5,18 @@
 	</button>
 	
 	<% if (session._id) { %>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-				</li>
-			</ul>
-			<form class="form-inline my-2 my-lg-0" action="/logout" method="get">
-				<span class="navbar-text">
-					<%= session.userid %> &nbsp;
-				</span>
-				<button class="btn btn-primary my-2 my-sm-0" type="submit">Logout</button>
-			</form>
-		</div>
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item active">
+				<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+			</li>
+		</ul>
+		<form class="form-inline my-2 my-lg-0" action="/logout" method="post">
+			<span class="navbar-text">
+				<%= session.userid %> &nbsp;
+			</span>
+			<button class="btn btn-primary my-2 my-sm-0" type="submit">Logout</button>
+		</form>
+	</div>
 	<% } %>
 </nav>
