--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	
-	<% if (session._id) { %>
+	<% if (session.authenticated) { %>
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item active">
