--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,54 +1,100 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Report System</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/dataTables.css"/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	 crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.16/datatables.min.css" />
 </head>
+
 <body>
 	<% include partials/header %>
-	
-	<div class="container" style="margin-top:100px">
-		<h3>User Report</h3>
-		<br>
-		<table id="myTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
-			<thead>
-				<tr>
-					<th>Name</th>
-					<th>Date</th>
-					<th>Score</th>
-				</tr>
-			</thead>
-			<tbody>
-				<% for (var i in records) { %>
-				<tr>
-					<td>
-						<form action="/report" method="post">
-							<button type="submit" class="btn btn-link" name="name" value="<%= records[i].username %>">
-								<%= records[i].username %>
-							</button>
+
+		<div class="container" style="margin-top:100px">
+			<h3>User Report</h3>
+			<br>
+			<table id="myTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+				<thead>
+					<tr>
+						<th>Name</th>
+						<th>Date</th>
+						<th>Score</th>
+						<th class="actions"></th>
+					</tr>
+				</thead>
+				<tbody>
+					<% for (var i in records) { %>
+						<tr>
+							<td>
+								<form action="/report" method="post">
+									<button type="submit" class="btn btn-link" name="name" value="<%= records[i].username %>">
+										<%= records[i].username %>
+									</button>
+								</form>
+							</td>
+							<td>
+								<%= moment(records[i].Score.date).format("YYYY-MM-DD HH:mm") %>
+							</td>
+							<td>
+								<%= records[i].Score.level1 %>
+							</td>
+							<td>
+								<button type="button" class="btn btn-link" data-toggle="modal" data-target="#editModal">
+									<i class="fas fa-edit fa-lg"></i>
+								</button>
+							</td>
+						</tr>
+						<% } %>
+				</tbody>
+			</table>
+		</div>
+
+		<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h3 class="modal-title" id="editModalLabel">Edit Record</h3>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<form>
+							<div class="form-group">
+								<label for="username" class="col-form-label">Name:</label>
+								<input type="text" class="form-control" id="username">
+							</div>
 						</form>
-					</td>
-					<td>
-						<%= moment(records[i].Score.date).format("YYYY-MM-DD HH:mm") %>
-					</td>
-					<td>
-						<%= records[i].Score.level1 %>
-					</td>
-				</tr>
-				<% } %>
-			</tbody>
-		</table>
-	</div>
-	
-	<script src="js/bootstrap.js"></script>
-	<script src="js/dataTables.js"></script>
-	<script src="js/react.js"></script>
-	<script>
-		$(document).ready(function(){
-			$('#myTable').DataTable();
-		});
-	</script>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-primary">Save changes</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		 crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+		 crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+		 crossorigin="anonymous"></script>
+		<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.16/datatables.min.js"></script>
+		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+		<script>
+			$(document).ready(function () {
+				$('#myTable').DataTable({
+					'info': false,
+					"columnDefs": [{
+						"targets": 'actions',
+						"orderable": false,
+					}]
+				});
+			});
+		</script>
 </body>
+
 </html>
