--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,67 +1,90 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Report System</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	 crossorigin="anonymous">
 </head>
+
 <body>
 	<% include partials/header %>
 
-	<div class="container" style="margin-top:100px" align="center">
+		<div class="container" style="margin-top:100px" align="center">
 
-		<% if (locals.success) { %>
-		<div class="alert alert-success col-md-4" role="alert">
-			<strong><%= success %></strong>
-		</div>
-		<% } %>
-		<% if (locals.warning) { %>
-		<div class="alert alert-danger col-md-4" role="alert">
-			<strong><%= warning %></strong>
-		</div>
-		<% } %>
-
-		<div class="card text-center col-md-4">
-			<div class="card-body">
-				<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-					<li class="nav-item">
-						<a class="nav-link active" id="pills-login-tab" data-toggle="pill" href="#pills-login" role="tab" aria-controls="pills-login" aria-selected="true">Login</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" id="pills-register-tab" data-toggle="pill" href="#pills-register" role="tab" aria-controls="pills-register" aria-selected="false">Register</a>
-					</li>
-				</ul>
-				<hr>
-				<div class="tab-content" id="pills-tabContent">
-					<div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="pills-login-tab">
-						<form action="/login" method="post">
-							<input type="text" name="userid" class="form-control" placeholder="User ID" required><br>
-							<input type="password" name="password" class="form-control" placeholder="Password" required><br>
-							<input type="submit" value="Login" class="btn btn-primary btn-block"><br>
-						</form>
-					</div>
-					<div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="pills-register-tab">
-						<form action="/register" method="post">
-							<input type="text" name="userid" class="form-control" placeholder="User ID" required><br>
-							<input type="password" id="password" name="password" class="form-control" placeholder="Password" required><br>
-							<input type="password" id="confirm_password" name="confirm_password" class="form-control" placeholder="Confirm Password" oninput="validatePassword(this)" required><br>
-							<input type="submit" value="Register" class="btn btn-primary btn-block"><br>
-						</form>
-					</div>
+			<% if (locals.success) { %>
+				<div class="alert alert-success col-md-4" role="alert">
+					<strong>
+						<%= success %>
+					</strong>
 				</div>
-			</div>
+				<% } %>
+					<% if (locals.warning) { %>
+						<div class="alert alert-danger col-md-4" role="alert">
+							<strong>
+								<%= warning %>
+							</strong>
+						</div>
+						<% } %>
+
+							<div class="card text-center col-md-4">
+								<div class="card-body">
+									<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+										<li class="nav-item">
+											<a class="nav-link active" id="pills-login-tab" data-toggle="pill" href="#pills-login" role="tab" aria-controls="pills-login"
+											 aria-selected="true">Login</a>
+										</li>
+										<li class="nav-item">
+											<a class="nav-link" id="pills-register-tab" data-toggle="pill" href="#pills-register" role="tab" aria-controls="pills-register"
+											 aria-selected="false">Register</a>
+										</li>
+									</ul>
+									<hr>
+									<div class="tab-content" id="pills-tabContent">
+										<div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="pills-login-tab">
+											<form action="/login" method="post">
+												<input type="text" name="userid" class="form-control" placeholder="User ID" required>
+												<br>
+												<input type="password" name="password" class="form-control" placeholder="Password" required>
+												<br>
+												<input type="submit" value="Login" class="btn btn-primary btn-block">
+												<br>
+											</form>
+										</div>
+										<div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="pills-register-tab">
+											<form action="/register" method="post">
+												<input type="text" name="userid" class="form-control" placeholder="User ID" required>
+												<br>
+												<input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+												<br>
+												<input type="password" id="confirm_password" name="confirm_password" class="form-control" placeholder="Confirm Password"
+												 oninput="validatePassword(this)" required>
+												<br>
+												<input type="submit" value="Register" class="btn btn-primary btn-block">
+												<br>
+											</form>
+										</div>
+									</div>
+								</div>
+							</div>
 		</div>
-	</div>
-	
-	<script src="js/bootstrap.js"></script>
-	<script>
-		function validatePassword(input) {
-			if (input.value != document.getElementById('password').value) {
-				input.setCustomValidity('Passwords don\'t match.');
-			} else {
-				input.setCustomValidity('');
+
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		 crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+		 crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+		 crossorigin="anonymous"></script>
+		<script>
+			function validatePassword(input) {
+				if (input.value != document.getElementById('password').value) {
+					input.setCustomValidity('Passwords don\'t match.');
+				} else {
+					input.setCustomValidity('');
+				}
 			}
-		}
-	</script>
+		</script>
 </body>
+
 </html>
