--- a/views/reportByDate.ejs
+++ b/views/reportByDate.ejs
@@ -12,8 +12,8 @@
 
 <body>
 	<% include partials/header %>
-		<div class="container" style="margin-top:100px">
-			<h3>
+		<div class="container-fluid" style="margin-top:100px"></div>
+			<h3 style="text-align:center">
 				<%= record.UserName %>'s Report on
 					<%= moment(record.date).format("YYYY-MM-DD HH:mm") %>
 			</h3>
@@ -22,8 +22,9 @@
 				<thead class="thead-dark">
 					<tr>
 						<th>Level</th>
-						<th>Item remember time</th>
-						<th>Time for serving customer</th>
+						<th>Item remember time(s)</th>
+						<th>Task</th>
+						<th>Time for serving customer(s)</th>
 						<th>Hints used</th>
 						<th>Hints used (after distraction)</th>
 						<th>Hints used (after incorrect)</th>
@@ -40,31 +41,40 @@
 								<%= record.Record[i].theTimeUsedToRememberTheitem %>
 							</td>
 							<td>
-								<!-- <%= record.Record[i].theTimeUsedToServeCustomer.map(function(x) { return parseInt(x, 10) }) %> -->
-								<% for(j in record.Record[i].theTimeUsedToServeCustomer) { %>
-									<span class="badge badge-secondary">
-										<%= parseInt(record.Record[i].theTimeUsedToServeCustomer[j]) %>
-									</span>
-									<% } %>
+								<ul class="list-group">
+									<% for(j in record.Record[i].theTimeUsedToServeCustomer) { %>
+										<li class="list-group-item">
+											Task <%= parseInt(j)+1 %>
+										</li>
+										<% } %>
+								</ul>
 							</td>
 							<td>
-								<% for(j in record.Record[i].numOfHintsUsedForEachCustomer) { %>
-									<h5>
-										<span class="badge badge-secondary">
+								<ul class="list-group">
+									<% for(j in record.Record[i].theTimeUsedToServeCustomer) { %>
+										<li class="list-group-item">
+											<%= parseInt(record.Record[i].theTimeUsedToServeCustomer[j]) %>
+										</li>
+										<% } %>
+								</ul>
+							</td>
+							<td>
+								<ul class="list-group">
+									<% for(j in record.Record[i].numOfHintsUsedForEachCustomer) { %>
+										<li class="list-group-item">
 											<%= record.Record[i].numOfHintsUsedForEachCustomer[j] %>
-										</span>
-									</h5>
-									<% } %>
+										</li>
+										<% } %>
+								</ul>
 							</td>
 							<td>
-								<% for(j in record.Record[i].numOfHintsUsedAfterDistractionHappend) { %>
-									<h5>
-										<span class="badge badge-light">
+								<ul class="list-group">
+									<% for(j in record.Record[i].numOfHintsUsedAfterDistractionHappend) { %>
+										<li class="list-group-item">
 											<%= record.Record[i].numOfHintsUsedAfterDistractionHappend[j] %>
-										</span>
-									</h5>
-									<% } %>
-
+										</li>
+										<% } %>
+								</ul>
 							</td>
 							<td>
 								<ul class="list-group">
@@ -76,12 +86,13 @@
 								</ul>
 							</td>
 							<td>
-								<% for(j in record.Record[i].numOfWrongCounterForEachCustomer) { %>
-									<span class="badge badge-primary">
-										<%= record.Record[i].numOfWrongCounterForEachCustomer[j] %>
-									</span>
-									<% } %>
-
+								<ul class="list-group">
+									<% for(j in record.Record[i].numOfWrongCounterForEachCustomer) { %>
+										<li class="list-group-item">
+											<%= record.Record[i].numOfWrongCounterForEachCustomer[j] %>
+										</li>
+										<% } %>
+								</ul>
 							</td>
 						</tr>
 						<% } %>
