--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 <body>
 	<% include partials/header %>
 		<div class="container" style="margin-top:100px">
-			<h3>User</h3>
+			<h3 style="text-align:center">User</h3>
 			<br>
 			<table id="myTable" class="table table-bordered" cellspacing="0" width="100%">
 				<thead class="thead-dark">
