--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 		<div class="container" style="margin-top:100px">
 			<h3 style="text-align:center">User</h3>
 			<br>
-			<table id="myTable" class="table table-bordered" cellspacing="0" width="100%">
+			<table id="myTable" class="table table-hover" cellspacing="0" width="100%">
 				<thead class="thead-dark">
 					<tr>
 						<th>Name</th>
