--- a/views/report.ejs
+++ b/views/report.ejs
@@ -25,7 +25,7 @@
 					<canvas id="myChart"></canvas>
 				</div>
 			</div>
-			<table id="myTable" class="table table-bordered" cellspacing="0" width="100%">
+			<table id="myTable" class="table table-hover" cellspacing="0" width="100%">
 				<thead class="thead-dark">
 					<tr>
 						<th>#</th>
