--- a/views/reportByDate.ejs
+++ b/views/reportByDate.ejs
@@ -35,7 +35,7 @@
 					<br />
 					<div class="tab-content" id="myTabContent">
 						<div class="tab-pane fade show active" id="statistics" role="tabpanel" aria-labelledby="statistics-tab">
-							<table id="myTable" class="table table-hover" cellspacing="0" width="100%">
+							<table id="myTable" class="table table-hover table-responsive" cellspacing="0" width="100%">
 								<thead>
 									<tr class="thead-dark">
 										<th>Level</th>
