Performance for each customer

--- a/views/reportByDate.ejs
+++ b/views/reportByDate.ejs
@@ -40,7 +40,7 @@
 									<tr class="thead-dark">
 										<th>Level</th>
 										<th>Item remember time(s)</th>
-										<th>No. of task (customer)</th>
+										<th>No. of task</th>
 										<th>Time for serving customer(s)</th>
 										<th>Hints used</th>
 										<th>Hints used (after distraction)</th>
@@ -48,6 +48,7 @@
 										<th>Incorrect cook</th>
 										<th>Incorrect cook (after distraction)</th>
 										<th>Distraction</th>
+										<th>Performance</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -132,6 +133,7 @@
 														<% } %>
 												</ul>
 											</td>
+											<td></td>
 										</tr>
 										<% } %>
 								</tbody>
