--- a/views/reportByDate.ejs
+++ b/views/reportByDate.ejs
@@ -148,63 +148,17 @@
 											<td class="text-left" colspan="11">
 												<div class="collapse" id="collapsePerformance<%=i%>">
 													<div class="row">
-														<% for(j in record.Record[i]['short-term memory']) { %>
+														<% for(j in record.Record[i]['description']) { %>
 															<div class="col-sm">
-																<p>
-
-																</p>
 																<h5>
 																	<span class="badge badge-secondary">Task
 																		<%= parseInt(j)+1 %>
 																	</span>
 																</h5>
-																<% if (record.Record[i]['attention'][j] == null) { %>
-																	<% if (record.Record[i]['short-term memory'][j] >= 50) { %>
-																		<div class="alert alert-success" role="alert">
-																			<strong>short-term memory</strong>
-																			<%= record.Record[i]['short-term memory'][j] %>
-																		</div>
-																		<% } else { %>
-																			<div class="alert alert-danger" role="alert">
-																				<strong>short-term memory</strong>
-																				<%= record.Record[i]['short-term memory'][j] %>
-																			</div>
-																			<% } %>
-																				<% if (record.Record[i]['recall'][j] >= 50) { %>
-																					<div class="alert alert-success" role="alert">
-																						<strong>recall</strong>
-																						<%= record.Record[i]['recall'][j] %>
-																					</div>
-																					<% } else { %>
-																						<div class="alert alert-danger" role="alert">
-																							<strong>recall</strong>
-																							<%= record.Record[i]['recall'][j] %>
-																						</div>
-																						<% } %>
-																							<% if (record.Record[i]['self-efficacy'][j] >= 50) { %>
-																								<div class="alert alert-success" role="alert">
-																									<strong>self-efficacy</strong>
-																									<%= record.Record[i]['self-efficacy'][j] %>
-																								</div>
-																								<% } else { %>
-																									<div class="alert alert-danger" role="alert">
-																										<strong>self-efficacy</strong>
-																										<%= record.Record[i]['self-efficacy'][j] %>
-																									</div>
-																									<% } %>
-																										<% } else  {%>
-																											<% if (record.Record[i]['attention'][j] >= 50) { %>
-																												<div class="alert alert-success" role="alert">
-																													<strong>attention</strong>
-																													<%= record.Record[i]['attention'][j] %>
-																												</div>
-																												<% } else {%>
-																													<div class="alert alert-danger" role="alert">
-																														<strong>attention</strong>
-																														<%= record.Record[i]['attention'][j] %>
-																													</div>
-																													<% } %>
-																														<% } %>
+
+																<div class="alert alert-<%=record.Record[i]['alert'][j]%>" role="alert">
+																	<%= record.Record[i]['description'][j] %>
+																</div>
 															</div>
 															<% } %>
 													</div>
